# booktool

./: README.md  setup.cfg
booktool/: __init__.py  __main__.py  epub.py  util.py
booktool/audio/: __init__.py  group.py  track.py
tests/: test_util.py
