[metadata]
name = booktool
version = 0.4.0
author = Christopher Brown
author_email = io@henrian.com
url = https://github.com/chbrown/booktool
description = eBook (EPUB and Audiobook) management tool
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Topic :: Education
  Topic :: Multimedia :: Sound/Audio
  Topic :: Multimedia :: Sound/Audio :: Speech
  Topic :: Scientific/Engineering
  Topic :: System :: Archiving
  Topic :: System :: Archiving :: Backup
  Topic :: Text Processing :: General
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.6
install_requires =
  click>=7.0
  cytoolz>=0.8
  mutagen>=1.42
setup_requires =
  pytest-runner
tests_require =
  pytest
  pytest-black
  pytest-cov

[options.entry_points]
console_scripts =
  booktool = booktool.__main__:main

[aliases]
test = pytest

[tool:pytest]
addopts =
  --black
  --cov=booktool
  --cov-branch

[bdist_wheel]
universal = 1
